// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FingerLoadingProgressionRepository > classifies high intensity only from explicit thresholds using any configured threshold 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 2,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 2,
      "entries_in_aggregates": 2,
      "exposure_status": "observed",
      "high_intensity_day": true,
      "high_intensity_entries": 1,
      "is_rest_day": false,
      "max_effective_load_kg": 100,
      "max_load_to_bodyweight_ratio": 1.25,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": false,
      "high_intensity_entries": 0,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": 1,
    "matching_entries": 1,
    "reason": null,
    "status": "available",
    "thresholds": {
      "min_effective_load_kg": 110,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": 9,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": false,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": true,
          "id": "00000000-0000-4000-8000-000000000101",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 9,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 2,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 100,
    "max_load_to_bodyweight_ratio": 1.25,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > consolidates exact duplicate observations from different canonical members 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 1,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 1,
      "entries_in_aggregates": 1,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": 100,
      "max_load_to_bodyweight_ratio": 1.25,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": true,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
              "00000000-0000-4000-8000-000000000012",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
              "00000000-0000-4000-8000-000000000101",
            ],
            "source_providers": [
              "manual",
              "mirror",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 1,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 100,
    "max_load_to_bodyweight_ratio": 1.25,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > continues combined exposure streaks across climbing-only and finger-loading days 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": true,
        "climbing": true,
        "climbing_status": "observed",
        "consecutive_exposure_days": 2,
        "date": "2026-07-11",
        "exposure_status": "observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 1,
      "entries_in_aggregates": 1,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": 100,
      "max_load_to_bodyweight_ratio": 1.25,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 1,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 100,
    "max_load_to_bodyweight_ratio": 1.25,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > flags conflicting provider-member observations and excludes them from aggregates 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 2,
    "entries_excluded_from_aggregates": 2,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 1,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 2,
      "entries_in_aggregates": 0,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": true,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [
            "possible_overlapping_provider_observation",
          ],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
        {
          "added_weight_kg": 25,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 105,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": true,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000102",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.3125,
          "notes": "Controlled",
          "original_external_load_kg": 25,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000012",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000102",
            ],
            "source_providers": [
              "mirror",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [
            "possible_overlapping_provider_observation",
          ],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [
        "possible_overlapping_finger_loading_entries",
      ],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 0,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": null,
    "max_load_to_bodyweight_ratio": null,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > keeps combined absence and streak unavailable until both channels have coverage 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": null,
        "climbing_status": "unavailable",
        "consecutive_exposure_days": null,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-11",
  },
  "coverage": {
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 1,
      "entries_in_aggregates": 1,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": 100,
      "max_load_to_bodyweight_ratio": 1.25,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 1,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 100,
    "max_load_to_bodyweight_ratio": 1.25,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > preserves assistance and missing optional observations without manufacturing repetitions 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 1,
      "entries_in_aggregates": 1,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": 60,
      "max_load_to_bodyweight_ratio": 0.75,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 0,
          "assistance_kg": 20,
          "bodyweight_kg": 80,
          "edge_size_mm": null,
          "effective_load_kg": 60,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": null,
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 0.75,
          "notes": null,
          "original_external_load_kg": -20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": null,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 1,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 60,
    "max_load_to_bodyweight_ratio": 0.75,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;

exports[`FingerLoadingProgressionRepository > returns a separate finger-load channel with exact exposure calculations and provenance 1`] = `
{
  "channel": {
    "id": "finger_loading",
    "interchangeable_with": [],
    "note": "Finger loading remains a separate exposure channel from climbing, cardiovascular, and generic strength load.",
  },
  "combined_climbing_finger_exposure": {
    "daily": [
      {
        "any_exposure": true,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 1,
        "date": "2026-07-10",
        "exposure_status": "observed",
        "finger_loading": true,
        "finger_loading_status": "observed",
      },
      {
        "any_exposure": false,
        "climbing": false,
        "climbing_status": "not_observed",
        "consecutive_exposure_days": 0,
        "date": "2026-07-11",
        "exposure_status": "not_observed",
        "finger_loading": false,
        "finger_loading_status": "not_observed",
      },
    ],
    "definition": "Calendar-day union of recorded climbing sessions and finger-loading sessions; it does not combine numeric load across modalities or imply injury risk. Absence and streaks are reported only from the first date when both channels have coverage.",
    "first_joint_coverage_date": "2026-07-10",
  },
  "coverage": {
    "entries": 1,
    "entries_excluded_from_aggregates": 0,
    "first_observed_date": "2026-07-10",
    "merged_exact_duplicate_records": 0,
    "possible_duplicate_groups": 0,
    "sessions": 1,
    "timezone_assumed_sessions": 0,
  },
  "daily": [
    {
      "consecutive_finger_loading_days": 1,
      "date": "2026-07-10",
      "effective_load_kg_seconds": null,
      "entries": 1,
      "entries_in_aggregates": 1,
      "exposure_status": "observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": false,
      "max_effective_load_kg": 100,
      "max_load_to_bodyweight_ratio": 1.25,
      "sessions": 1,
      "total_time_under_tension_seconds": null,
    },
    {
      "consecutive_finger_loading_days": 0,
      "date": "2026-07-11",
      "effective_load_kg_seconds": null,
      "entries": 0,
      "entries_in_aggregates": 0,
      "exposure_status": "not_observed",
      "high_intensity_day": null,
      "high_intensity_entries": null,
      "is_rest_day": true,
      "max_effective_load_kg": null,
      "max_load_to_bodyweight_ratio": null,
      "sessions": 0,
      "total_time_under_tension_seconds": null,
    },
  ],
  "definitions": {
    "consecutive_days": "Count of consecutive local calendar days with at least one recorded finger-loading entry; no injury-risk interpretation is applied.",
    "duplicate_handling": "Canonical activities count once; exact matching entries from different provider members are consolidated with all source evidence retained.",
    "effective_load": "Bodyweight in kilograms plus the signed external load; negative external load is assistance.",
    "effective_load_kg_seconds": "Effective load multiplied by exact time under tension; it remains unavailable while repetitions per set are missing.",
    "high_intensity": "An entry is high intensity when it meets any configured threshold. No classification is made without a caller-supplied threshold.",
    "time_under_tension": "Exact time under tension is unavailable because repetitions within a set are not recorded in the canonical source schema.",
  },
  "high_intensity": {
    "days": null,
    "matching_entries": null,
    "reason": "High-intensity classification requires at least one caller-supplied threshold.",
    "status": "unavailable",
    "thresholds": {
      "min_effective_load_kg": null,
      "min_load_to_bodyweight_ratio": null,
      "min_rpe": null,
    },
  },
  "pagination": {
    "has_more": false,
    "limit": 100,
    "next_cursor": null,
  },
  "range": {
    "end_date": "2026-07-11",
    "start_date": "2026-07-10",
    "timezone": "UTC",
  },
  "sessions": [
    {
      "activity_id": "00000000-0000-4000-8000-000000000010",
      "date": "2026-07-10",
      "duration_minutes": 30,
      "entries": [
        {
          "added_weight_kg": 20,
          "assistance_kg": 0,
          "bodyweight_kg": 80,
          "edge_size_mm": 20,
          "effective_load_kg": 100,
          "effective_load_kg_seconds": null,
          "excluded_from_aggregates": false,
          "exposure_calculation": {
            "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
            "status": "unavailable",
          },
          "grip_type": "half_crimp",
          "hang_duration_seconds": 10,
          "high_intensity": null,
          "id": "00000000-0000-4000-8000-000000000100",
          "laterality": "both",
          "load_to_bodyweight_ratio": 1.25,
          "notes": "Controlled",
          "original_external_load_kg": 20,
          "pain": null,
          "pain_status": "not_recorded_by_canonical_schema",
          "protocol": "max_hang",
          "provenance": {
            "calculated_fields": [
              "added_weight_kg",
              "assistance_kg",
              "effective_load_kg",
              "load_to_bodyweight_ratio",
              "high_intensity",
            ],
            "merged_duplicate": false,
            "source_activity_ids": [
              "00000000-0000-4000-8000-000000000011",
            ],
            "source_entry_ids": [
              "00000000-0000-4000-8000-000000000100",
            ],
            "source_providers": [
              "manual",
            ],
            "source_recorded_fields": [
              "protocol",
              "grip_type",
              "edge_size_mm",
              "original_external_load_kg",
              "bodyweight_kg",
              "hang_duration_seconds",
              "rest_duration_seconds",
              "sets",
              "laterality",
              "rpe",
              "notes",
            ],
            "value_kind": "mixed",
          },
          "quality_flags": [],
          "repetitions_per_set": null,
          "repetitions_status": "not_recorded_by_canonical_schema",
          "rest_duration_seconds": 180,
          "rpe": 8,
          "sets": 5,
          "total_time_under_tension_seconds": null,
        },
      ],
      "member_activity_ids": [
        "00000000-0000-4000-8000-000000000011",
      ],
      "name": "Max hangs",
      "quality_flags": [],
      "source_external_ids": [
        {
          "externalId": "hang-session-1",
          "memberActivityId": "00000000-0000-4000-8000-000000000011",
          "providerId": "manual",
        },
      ],
      "source_providers": [
        "manual",
      ],
      "started_at": "2026-07-10T18:00:00.000Z",
      "timezone": {
        "analysis_timezone": "UTC",
        "assumed": false,
        "end_utc_offset_minutes": -420,
        "local_time_source": "provider_timezone",
        "start_utc_offset_minutes": -420,
        "value": "America/Los_Angeles",
      },
    },
  ],
  "summary": {
    "effective_load_kg_seconds": null,
    "entries": 1,
    "exposure_calculation": {
      "reason": "Exact exposure requires repetitions per set, which the canonical source schema does not record.",
      "status": "unavailable",
    },
    "max_effective_load_kg": 100,
    "max_load_to_bodyweight_ratio": 1.25,
    "sessions": 1,
    "total_time_under_tension_seconds": null,
  },
}
`;
